--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,7 +11,7 @@ import Features3 from '~/components/widgets/Features3.astro';
 import FAQs from '~/components/widgets/FAQs.astro';
 
 const metadata = {
-  title: 'Startup Landing Page',
+  title: 'Localizei.inc- Beta Version-----------------',
 };
 ---
 
@@ -201,49 +201,7 @@ const metadata = {
   <Features3
     title="Ficou com mais alguma dúvida?"
     subtitle="Entre em contato conosco e nós iremos te ajudar a sanar todas as suas dúvidas"
-    columns={4}
-    items={[
-      {
-        title: 'Contato',
-        icon: 'tabler:phone',
-        callToAction: {
-          target: '_blank',
-          text: '5583998172964',
-          href: '/',
-          variant: 'link',
-        },
-      },
-      {
-        title: 'Email',
-        icon: 'tabler:mail',
-        callToAction: {
-          target: '_blank',
-          text: 'contato@localizei.com',
-          href: '/',
-          variant: 'link',
-        },
-      },
-      {
-        title: 'Instagram',
-        icon: 'tabler:brand-instagram',
-        callToAction: {
-          target: '_blank',
-          text: '@localizei',
-          href: '/',
-          variant: 'link',
-        },
-      },
-      {
-        title: 'Facebook',
-        icon: 'tabler:brand-facebook',
-        callToAction: {
-          target: '_blank',
-          text: '@localizei',
-          href: '/',
-          variant: 'link',
-        },
-      },
-    ]}
+    
   />
 
   <!-- CallToAction Widget *********** -->
@@ -253,7 +211,7 @@ const metadata = {
       variant: "primary",
       target: '_blank',
       text: 'Acesse aqui o formulário de inscrição',
-      href: 'https://github.com/onwidget/astrowind',
+      href: 'https://forms.gle/R7Pxd84f35beU8zC8',
      
     }]}
   >
